packages/yew-macro/tests/html_macro/block-fail.stderr
error[E0277]: the trait bound `(): Into<VNode>` is not satisfied
  --> tests/html_macro/block-fail.rs:10:20
   |
10 |         <div>{ for (0..3).map(|_| not_tree()) }</div>
   |                    ^^^^^^ the trait `std::fmt::Display` is not implemented for `()`
   |
   = note: required for `()` to implement `ToString`
   = note: required for `VNode` to implement `From<()>`
   = note: required for `()` to implement `Into<VNode>`
note: required by a bound in `into_node_iter`
  --> $WORKSPACE/packages/yew/src/utils/mod.rs
   |
   | pub fn into_node_iter<IT, T, R>(it: IT) -> impl Iterator<Item = R>
   |        -------------- required by a bound in this function
...
   |     T: Into<R>,
   |        ^^^^^^^ required by this bound in `into_node_iter`
